--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,20 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.show_sql=true
 
-
-
 server.error.include-message=always
 server.error.include-binding-errors=always
 
+spring.jpa.hibernate.ddl-auto=create
 
-#spring.jpa.hibernate.ddl-auto=create
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ivan.leshchyshynnn@gmail.com
+spring.mail.password=gwfuzwkdqvtqmbhl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.smtp.ssl.protocols=TLSv1.2
+
+
+
+
 
